22 Jul 2018
fix: incorrect use of $cache->add
update: only show block in user_blocks if block is enabled by site
remove: redundant columns from users table
fix: bitwise for opt2
remove: imacss and postcss-font-base64

21 Jul 2018
update: bitbucket.php using ajax drag and drop
remove: incorrect method parameter stdhead()
remove: avatar path from bitbucket

20 Jul 2018
cleanup: formatting, alignment, replace join with implode

19 Jul 2018
fix: youtube link on upload
update: database files
add: php-cs-fixer and postcss to uglify.php
add: auto download torrent after upload
fix: typo in function_tvmaze.php
fix: trivia results on index page not showing scrollbar
update: log vierer better messages splitting
fix: direct link to post button
fix: latest comments poster not using url_proxy
fix: removal of background

18 Jul 2018
update: database files
add: latest torrents slider using flexslider and torrent banners

17 Jul 2018
fix: background image not 100% width
fix: bluray releases getting incorrect imdbid

16 Jul 2018
add: bluray.com new releases page
replace: file_get_contents() with fetch()
add: omdb lookup to images_cleanup.php
fix: random_int larger int listed before smaller int casino.php

15 Jul 2018
fix: missing var
add: OMDb API
add: upcoming movies from imdb
merged: all lists into 1 file
update: check file/folder exists before processing
fix: images cleanup
update: composer require PHP >= 7.2.0
update: increase font size slightly
cleanup: general code cleanup, phpstorm
update: database files
fix: all like buttons
add: additional like buttons
update: all comments displayed in same manner
add: imdb info in requests and offers
add: cleanup script to download anf optimize images if using image proxy
remove: poster from image background
add: try/catch ImageProxy
fix: time sort in tvmaze.php
update: tmdb image sizes for better quality
add: min-width to index page blocks titles
rename: pm_system messages